test/language/spec/stdlib/invalid/array_bad_inner.topo
// TEST: array<UnknownType, 4> with an unresolvable element type
// EXPECT-ERROR: invalid element type of array<T, N>

namespace bad {
  public:
    array<UnknownType, 4> badElem();
}
